# ComfyUI-AnotherUtils

./: .gitignore  __init__.py  audio_concatenate.py  audio_waveform_slicer.py  batch_image_list.py  caption_image_loader.py  character_constructor.py  comparison_swipe.py  csv_prompt_loader.py  custom_crop.py  dataset_loader.py  fix_duplicate_suffix.py  folder_image_loader.py  folder_video_concatenator.py  inference_nodes.py  interactive_crop.py  last_image.py  load_images.py  load_remove_alpha.py  log.txt  nearest_upscale.py  pixel_art_converter.py  pixel_art_converter_parallel.py  pixel_normalizer.py  pyproject.toml  readme.md  remove_alpha.py  smart_resize.py  verify_native_inference.py
.claude/: settings.local.json
audio/: audio_slice_selector.py  audio_waveform_slicer.py
characters/: character_generator.py  fighting_game_character.py  walking_pose.py
core/: server_routes.py
docs/: CHARACTER_AND_ANIMATION.md  FILTERS.md  IMAGE_PROCESSING.md  INFERENCE.md  PIXEL_ART.md  TRELLO_INTEGRATION.md
gimp_nodes/: adaptive_noise.py  cie_lch_noise_gegl_like.py  image_type_detector.py  mean_curvature_blur_gegl_like.py  rgb_noise_gegl_like.py
image_processing/: image_composite_masked.py  image_grid_slicer.py  nearest_upscale.py  point_collector.py  segs_adapter.py
inference/: depth_service.py  detection_service.py  segmentation_service.py  utils.py
js/: audio_concatenate.js  audio_waveform_slicer.js  caption_image_loader.js  debug_list.js  interactive_crop.js  load_gif_frames.js  point_collector.js  trello_browser.js
loaders/: folder_image_loader.py  load_images.py  (+9 more)
(+92 files in other folders)
